<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vdroid.dictateningprov2.MainActivity">
    <item
        android:id="@+id/select_file"
        android:orderInCategory="101"
        android:title="@string/select_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_text"
        android:orderInCategory="102"
        android:title="@string/save_text_only"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_progress"
        android:orderInCategory="103"
        android:title="@string/save_progress"
        app:showAsAction="never" />
    <item
        android:id="@+id/load_progress"
        android:orderInCategory="104"
        android:title="@string/load_progress"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_text"
        android:orderInCategory="105"
        android:title="@string/clear_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="200"
        android:title="@string/action_exit"
        android:icon="@drawable/exit_to_app"
        app:showAsAction="withText|ifRoom" />
</menu>
